# vm_stowaway

./: .gitignore  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
cli/: vm_stowaway.c
examples/: attach_example.c  controller_example.c  mach_client.c  target.c
include/: vm_stowaway.h
payload/: payload.c
python/: README.md  pyproject.toml
python/examples/: launch.py
python/vm_stowaway/: __init__.py
scripts/: smoke.sh
shim/: machshim.c
src/: controller.c  patcher.c  protocol.h  scanner.c  sysconfig.c
